--- a/.gitignore
+++ b/.gitignore
@@ -1,9 +1,11 @@
 META.yml
 Makefile
-inc/
 pm_to_blib
 blib
 *~
-.*
 !.gitignore
-!.shipit
+MYMETA.*
+.proverc
+/Stream-Buffered-*
+!META.json
+/.build
